[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tfl"
version = "0.1.0"
description = "Transport for London python client."
authors = ["Cellan Hall <hallcellan@gmail.com>"]
readme = "README.md"

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
pydantic = "~=1.10.7"
httpx = "~=0.24.0"

[tool.poetry.dev-dependencies]
pre-commit = "~=3.2.2"
black = "~=23.3.0"
ruff = "~=0.0.263"
mypy = "~=1.2.0"

[tool.black]
line-length = 120
color = true

exclude = '''
/(
    \.bzr
    | \.direnv
    | \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.nox
    | \.pants\.d
    | \.ruff_cache
    | \.__pypackages__
    | \.svn
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | env
    | venv
)/
'''

[tool.ruff]
select = ["I", "D", "N", "UP"]
line-length = 120

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    ".git",
    "__pycache__",
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.pyupgrade]
keep-runtime-typing = true

[tool.mypy]
  python_version = "3.10"
  pretty = true
  show_traceback = true
  color_output = true
