[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "py-tfl"
version = "0.4.2"
description = "A Python package for the Transport for London (TFL) API."
authors = ["Cellan Hall <hallcellan@gmail.com>"]
readme = "README.md"
packages = [
    {include = "tfl"},
]
homepage = "https://ce11an.github.io/tfl/"
repository = "https://github.com/Ce11an/tfl"

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.scripts]
tfl = "tfl.cli.main:app"

[tool.poetry.dependencies]
python = ">=3.8, <3.12"
httpx = "~=0.24.0"
typer = {extras = ["all"], version = "~=0.9.0"}

[tool.poetry.dev-dependencies]
pre-commit = "~=3.3.2"
black = "~=23.3.0"
ruff = "~=0.0.267"
mypy = "~=1.3.0"
pytest = "~=7.3.1"
pytest-cov = "~=4.0.0"
pytest-httpx = "~=0.22.0"
pytest-asyncio = "~=0.21.0"
mkdocs-material = "~=9.1.14"
mkdocstrings = {extras = ["python"], version = "~=0.21.2"}

[tool.black]
line-length = 120
color = true

exclude = '''
/(
    \.bzr
    | \.direnv
    | \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.nox
    | \.pants\.d
    | \.ruff_cache
    | \.__pypackages__
    | \.svn
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | env
    | venv
)/
'''

[tool.ruff]
select = ["I", "D", "N", "UP"]
line-length = 120
target-version = "py38"

ignore = [
    "D107"
]

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    ".git",
    "__pycache__",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["I001"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.pyupgrade]
keep-runtime-typing = true

[tool.mypy]
  python_version = "3.8"
  pretty = true
  show_traceback = true
  color_output = true
